--- a/assets/src/scss/partials/navigation-bar-light.scss
+++ b/assets/src/scss/partials/navigation-bar-light.scss
@@ -14,6 +14,8 @@
   --top-navigation--input--placeholder--color: #{$grey-40};
   --nav-link--color: #{$black};
   --nav-link--hover--color: #{$black};
+  --nav-link-active--color: #{$black};
+  --nav-link-active--hover--color: #{$black};
 }
 
 #nav-mobile-menu {
