--- a/assets/src/styles/blocks.scss
+++ b/assets/src/styles/blocks.scss
@@ -27,6 +27,7 @@
 @import "blocks/core-overrides/BlockSpacing";
 @import "blocks/core-overrides/Separator";
 @import "blocks/core-overrides/Table";
+@import "blocks/core-overrides/media-text";
 
 // Other
 @import "blocks/WideBlocks";
