Burger menu new implementation
- New Navbar Refactor and update navigation bar template
- Change the way of showing the main navigation on mobile version
- Isolated markup with its own styles
- Remove old navigation mobile styles
- New UI to active link on desktop

--- a/assets/src/scss/base/_mixins.scss
+++ b/assets/src/scss/base/_mixins.scss
@@ -233,3 +233,26 @@ $nested-comment-left-margin: 50px;
     }
   }
 }
+
+@mixin scrollbar-layout {
+  // Only applied to Firefox
+  scrollbar-width: thin;
+  scrollbar-color: transparent;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-track {
+    border-radius: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background: rgba(0, 0, 0, 0.15);
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.2);
+  }
+}
