--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -5,7 +5,9 @@
 	</div>
 	{% endif %}
 	<div class="container d-flex flex-column flex-lg-row-reverse">
-		{% include 'footer_social_media.twig' %}
+		{% if (social_overrides is defined and social_overrides|length) or footer_social_menu|length %}
+			{% include 'footer_social_media.twig' %}
+		{% endif %}
 		{% if nav_type != 'minimal' %}
 			<nav class="footer-menu">
 				<ul class="list-unstyled">
