PLANET-6657 Fix CarouselHeader RTL slide transitions
This was due to a -100% margin right set in Bootstrap's CSS to the carousel items, it is fixed by overriding this value.

--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
@@ -113,6 +113,10 @@ $medium-image-height: 600px;
     opacity: 0;
     z-index: 3500;
 
+    html[dir="rtl"] & {
+      margin-right: auto;
+    }
+
     @include medium-and-up {
       height: $medium-image-height;
     }
