PLANET-6465: Add opt-in checkbox for submitting the comments form
Ref: https://jira.greenpeace.org/browse/PLANET-6465

Patch to disable existing plugin and removing its options
New Planet4 > Comments settings section
GDPR checkbox in template

--- a/assets/src/scss/pages/post/_comments-form.scss
+++ b/assets/src/scss/pages/post/_comments-form.scss
@@ -40,15 +40,17 @@
 
 #gdpr-comments-compliance {
   font-family: $roboto;
+  margin-bottom: 8px;
 
-  #gdpr-comments-compliance-text,
-  #gdpr-comments-label,
-  .custom-control-description {
-    font-size: 14px;
+  #gdpr-comments-checkbox {
+    display: inline-block;
+    margin-inline-end: 8px;
+    width: inherit;
   }
 
   #gdpr-comments-label {
-    font-weight: bold;
+    display: inline-block;
+    font-size: 14px;
   }
 }
 
