--- a/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
+++ b/assets/src/styles/blocks/CarouselHeader/CarouselHeaderStyle.scss
@@ -373,148 +373,148 @@ $medium-image-height: 600px;
       width: 580px;
     }
   }
+}
 
-  .main-header {
-    padding-top: 0;
-    padding-bottom: 0;
-    height: 100%;
+.carousel-caption .main-header {
+  padding-top: 0;
+  padding-bottom: 0;
+  height: 100%;
+  width: 100%;
+
+  @include large-and-up {
+    padding-top: 180px;
+    padding-bottom: 32px;
+    margin-inline-start: 80px;
+  }
+
+  @include x-large-and-up {
+    margin-inline-start: auto;
+  }
+
+  h2 {
     width: 100%;
+    color: $grey-80;
+    transition: unset;
+    transform: translateX($text-slide-offset);
+    font-size: 1.62rem;
+    margin-bottom: 18px;
+    line-height: 1.2;
+
+    html[dir="rtl"] & {
+      text-align: right;
+    }
+
+    @include small-and-up {
+      font-size: $font-size-xl;
+    }
+
+    @include medium-and-up {
+      font-size: 2.25rem;
+      margin-bottom: 24px;
+    }
 
     @include large-and-up {
-      padding-top: 180px;
-      padding-bottom: 32px;
-      margin-inline-start: 80px;
+      max-width: 100%;
+      width: 100%;
+      color: $white;
+      margin-bottom: 32px;
+      line-height: 1.2;
+      font-size: $font-size-xxl;
     }
 
     @include x-large-and-up {
-      margin-inline-start: auto;
-    }
-
-    h2 {
+      font-size: $font-size-xxxl;
+      line-height: 1.1;
+      max-width: 100%;
       width: 100%;
-      color: $grey-80;
-      transition: unset;
-      transform: translateX($text-slide-offset);
-      font-size: 1.62rem;
-      margin-bottom: 18px;
-      line-height: 1.2;
+    }
+  }
 
-      html[dir="rtl"] & {
-        text-align: right;
-      }
+  p {
+    display: block;
+    color: $grey-80;
+    font-family: $roboto;
+    font-size: .875rem;
+    font-weight: 500;
+    line-height: 22px;
+    width: 100%;
+    padding-inline-start: 0;
+    margin-bottom: 24px;
+    max-width: 100%;
 
-      @include small-and-up {
-        font-size: $font-size-xl;
-      }
-
-      @include medium-and-up {
-        font-size: 2.25rem;
-        margin-bottom: 24px;
-      }
-
-      @include large-and-up {
-        max-width: 100%;
-        width: 100%;
-        color: $white;
-        margin-bottom: 32px;
-        line-height: 1.2;
-        font-size: $font-size-xxl;
-      }
-
-      @include x-large-and-up {
-        font-size: $font-size-xxxl;
-        line-height: 1.1;
-        max-width: 100%;
-        width: 100%;
-      }
+    html[dir="rtl"] & {
+      text-align: right;
     }
 
-    p {
+    transform: translateX($text-slide-offset);
+
+    @include small-and-up {
+      font-size: $font-size-sm;
+    }
+
+    @include medium-and-up {
+      font-size: 1.125rem;
+      line-height: 1.6;
+      margin-bottom: 24px;
       display: block;
-      color: $grey-80;
-      font-family: $roboto;
-      font-size: .875rem;
-      font-weight: 500;
-      line-height: 22px;
-      width: 100%;
-      padding-inline-start: 0;
-      margin-bottom: 24px;
-      max-width: 100%;
+    }
+
+    @include large-and-up {
+      font-size: 1.125rem;
+      margin-bottom: 36px;
+      color: $white;
+    }
+
+    @include x-large-and-up {
+      font-size: 1.125rem;
+      line-height: 1.6;
+    }
+  }
+
+  .action-button {
+    left: 0;
+    right: 0;
+    position: relative;
+    font-family: $roboto;
+    width: 100%;
+    bottom: inherit;
+    margin-bottom: 24px;
+    text-align: center;
+    max-width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+
+    @include small-and-up {
+      width: auto;
+      bottom: inherit;
+      position: relative;
+    }
+
+    @include medium-and-up {
+      text-align: left;
+      position: inherit;
+      // bottom: 60px;
+      margin-top: 0;
+      margin-left: 0;
+      width: auto;
 
       html[dir="rtl"] & {
         text-align: right;
-      }
-
-      transform: translateX($text-slide-offset);
-
-      @include small-and-up {
-        font-size: $font-size-sm;
-      }
-
-      @include medium-and-up {
-        font-size: 1.125rem;
-        line-height: 1.6;
-        margin-bottom: 24px;
-        display: block;
-      }
-
-      @include large-and-up {
-        font-size: 1.125rem;
-        margin-bottom: 36px;
-        color: $white;
-      }
-
-      @include x-large-and-up {
-        font-size: 1.125rem;
-        line-height: 1.6;
+        margin-left: auto;
+        margin-right: 0;
       }
     }
 
-    .action-button {
-      left: 0;
-      right: 0;
-      position: relative;
-      font-family: $roboto;
-      width: 100%;
-      bottom: inherit;
-      margin-bottom: 24px;
-      text-align: center;
+    .btn {
+      width: auto;
+      min-width: 240px;
       max-width: 100%;
-      padding-left: 0;
-      padding-right: 0;
-
-      @include small-and-up {
-        width: auto;
-        bottom: inherit;
-        position: relative;
-      }
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
 
       @include medium-and-up {
-        text-align: left;
-        position: inherit;
-        // bottom: 60px;
-        margin-top: 0;
-        margin-left: 0;
-        width: auto;
-
-        html[dir="rtl"] & {
-          text-align: right;
-          margin-left: auto;
-          margin-right: 0;
-        }
-      }
-
-      .btn {
-        width: auto;
-        min-width: 240px;
-        max-width: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-
-        @include medium-and-up {
-          min-width: 280px;
-        }
+        min-width: 280px;
       }
     }
   }
