PLANET-6663 Fix password input width on mobile
Before this fix the input would go off-screen in small screen widths

--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -85,7 +85,11 @@ $min-height: 40px;
     display: inline-block;
     font-size: 16px;
     padding: 15px 14px 8px;
-    min-width: 400px;
+    width: 100%;
+
+    @include medium-and-up {
+      max-width: 400px;
+    }
   }
 
   .input-text input:hover {
