--- a/assets/src/scss/layout/_forms.scss
+++ b/assets/src/scss/layout/_forms.scss
@@ -138,11 +138,7 @@
     color: $grey-40;
   }
 
-  &:disabled {
-    opacity: 0.5;
-  }
-
-  &:not(:disabled):hover {
+  &:hover {
     border-color: $grey-40;
   }
 
@@ -150,7 +146,6 @@
     box-shadow: 0 0 0 2px rgba(0, 109, 253, 0.4);
     color: $grey-80;
     border-color: transparent;
-    outline: 0;
   }
 }
 
