Add semantic class name for discrete button style
* Just like the other button has `.btn-secondary` for the style, this
new button style should also be a separate class so that it also works
in cases.

--- a/templates/cookies.twig
+++ b/templates/cookies.twig
@@ -28,7 +28,7 @@
 			</div>
 			{% if show_settings and cookies.enable_reject_all_cookies %}
 				<button
-					class="btn reject-all-cookies"
+					class="btn btn-discrete reject-all-cookies"
 					data-ga-category="Cookies box"
 					data-ga-action="Reject all cookies"
 				>
