PLANET-6668 Implement Highlighted CTA pattern
This commit includes adding the dark-green color to the palette, and creating the transparent button styles

--- a/assets/src/scss/components/_buttons.scss
+++ b/assets/src/scss/components/_buttons.scss
@@ -287,3 +287,17 @@ button.load-more-mt {
   padding: 0 $sp-2;
   transition-duration: 100ms;
 }
+
+.wp-block-button.transparent-button a {
+  --transparent-button-- {
+    border-color: $white;
+    color: $white;
+    background: transparent;
+
+    &:hover,
+    &:active {
+      background: $white;
+      color: $grey-80;
+    }
+  }
+}
