--- a/assets/src/scss/base/_palette.scss
+++ b/assets/src/scss/base/_palette.scss
@@ -11,7 +11,8 @@ $palette: (
   "dark-blue": $dark-blue,
   "blue": $blue,
   "orange-hover": $orange-hover,
-  "yellow": $yellow
+  "yellow": $yellow,
+  "dark-green": $dark-green,
 );
 
 @each $name, $color in $palette {
@@ -21,5 +22,8 @@ $palette: (
 
   .has-#{$name}-background-color {
     background-color: $color;
+
+    --transparent-button--hover--color: #{$color};
+    --transparent-button--active--color: #{$color};
   }
 }
