--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -126,6 +126,14 @@
   }
 }
 
+.wp-block-button.transparent-button .wp-block-button__link[role="textbox"] {
+  --transparent-button-- {
+    border-color: $white;
+    color: $white;
+    background: transparent;
+  }
+}
+
 .editor-styles-wrapper p {
   // Matches https://github.com/greenpeace/planet4-master-theme/blob/ab3ee3a5fd7975fcdb71f633d9ce8704003306e8/assets/src/scss/base/_typography.scss#L11-L19.
   // We need to redeclare with a different selector here, because a core script sets a higher specificity.
