--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -17,16 +17,15 @@
   }
 }
 
-.edit-post-visual-editor {
-  .wp-block {
-    max-width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-  }
+.editor-styles-wrapper {
+  padding: 0 1rem;
+}
 
+.edit-post-visual-editor {
   li {
     font-size: unset;
   }
+
   @include table;
 }
 
@@ -165,6 +164,7 @@
     display: none !important;
   }
 }
+
 // By default the selected color is barely visible because of the white circle with check mark covering it.
 .components-color-palette__item.is-active {
   box-shadow: inset 0 0 0 6px;
